# OpenSourceBootCamp

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: api.py
backend/src/api/endpoints/: answer.py  router.py
backend/src/api/schemas/: query.py  response.py
backend/src/api/services/: task_manager.py
backend/src/config/: search.py  settings.py
backend/src/graph/: graph.py
backend/src/graph/nodes/: pro.py  simple.py
backend/src/graph/pro_mode/: aggregator.py  decomposer.py  facts_retriever.py  llm_decomposer.py
backend/src/graph/pro_mode/schemas/: facts.py  foreign_question.py  questions.py  result.py
backend/src/graph/router/: router.py
backend/src/graph/router/schemas/: route.py
backend/src/graph/states/: state.py
backend/src/graph/validator/: validator.py
backend/src/graph/validator/schemas/: validate.py
backend/src/models/: llm.py
backend/src/searches/: extractor.py
backend/src/searches/simple/: llm_with_search.py
frontend/: Dockerfile
frontend/front/: angular.json  package-lock.json  package.json  proxy.conf.js
frontend/front/src/: index.html  styles.css
frontend/front/src/app/: app.component.css  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/front/src/app/ask-page/: ask-page.component.css  ask-page.component.html  ask-page.component.ts
nginx/: default.conf
