[tool.poetry]
name = "open-source-bootcamp"
version = "0.1.0"
description = ""
authors = ["ML Engineer <ml_template@osbc.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^1.0.4"
langgraph = "^1.0.3"
langchain-openai = "^1.0.2"
langchain-tavily = "^0.2.13"
langchain = "^1.0.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
extend-exclude = '''
(
  notebooks/.*
)
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
